--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
     "next-pwa": "^5.6.0",
+    "openai": "^4.26.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.0",
     "tailwind-variants": "^0.1.20",
     "usehooks-ts": "^2.10.0",
     "zustand": "^4.5.0"
